--- a/extra/resources_list.html
+++ b/extra/resources_list.html
@@ -25,7 +25,7 @@
 <h5>{{ page.meta.description }}</h5>
     {% endif %}
     {% if page.meta.logo is defined %}
-<img style="float: right; max-width: 160px;" src="/img/{{ page.meta.logo}}" />
+<img style="float: right; max-width: 180px; margin-left: 25px;" src="/img/{{ page.meta.logo}}" />
     {% endif %}
       <!-- Use a hidden p tag to provide a preview -->
     {% if config.extra.resources.extended_preview %}
@@ -45,7 +45,7 @@
 <h5>{{ page.meta.description }}</h5>
       {% endif %}
     {% if page.meta.logo is defined %}
-<img style="float: right; max-width: 160px;" src="/img/{{ page.meta.logo}}" />
+<img style="float: right; max-width: 180px; margin-left: 25px;" src="/img/{{ page.meta.logo}}" />
     {% endif %}
       <!-- Use a hidden p tag to provide a preview -->
     {% if config.extra.resources.extended_preview %}
